--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ after_success:
   - docker build -t kevinhu7/multi-server ./server
   - docker build -t kevinhu7/multi-worker ./worker
   # Login to docker
-  - echo "$DOCKER_PASSWORD" | docker login -u "DOCKER_ID" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push to docker hub
   - docker push kevinhu7/multi-client
   - docker push kevinhu7/multi-nginx
