--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ after_success:
   - docker push kevinhu7/multi-worker
 
 deploy:
+  edge: true
   provider: elasticbeanstalk
   region: us-west-1
   app: multi-docker
