--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ deploy:
   provider: elasticbeanstalk
   region: us-west-2
   app: multi-docker
-  env: MultiDocker-env-1
+  env: MultiDocker-env
   bucket_name: elasticbeanstalk-us-west-2-628823726612
   bucket_path: docker-multi
   on:
